<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InfoActivity"
    android:padding="8dp">

    <ImageButton
        android:id="@+id/btnCancelInfo"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:background="@drawable/small_item_button_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back" />

    <TextView
        android:id="@+id/InfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/info_label"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/svInfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InfoLabel"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/groceryInfo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_text_1" />

            <TextView
                android:id="@+id/groceryInfo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_text_2" />

            <TextView
                android:id="@+id/groceryInfo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_text_3" />

            <TextView
                android:id="@+id/groceryInfo4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_text_4" />

            <TextView
                android:id="@+id/groceryInfo5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_text_5" />

            <TextView
                android:id="@+id/groceryInfo6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_text_6" />

            <TextView
                android:id="@+id/groceryInfo7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_text_7" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>